# ChangeLog for games-arcade/rocksndiamonds
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-arcade/rocksndiamonds/ChangeLog,v 1.19 2006/01/29 00:00:27 joshuabaergen Exp $

  28 Jan 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  rocksndiamonds-3.1.0.ebuild, rocksndiamonds-3.1.1.ebuild,
  rocksndiamonds-3.1.2.ebuild:
  Add modular X dependencies.

*rocksndiamonds-3.1.2 (12 Jan 2006)

  12 Jan 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +rocksndiamonds-3.1.2.ebuild:
  version bump

  22 Sep 2005; Michael Sterrett <mr_bones_@gentoo.org>
  rocksndiamonds-3.1.1.ebuild:
  fix case where USE="-X sdl"

*rocksndiamonds-3.1.1 (24 Aug 2005)

  24 Aug 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +rocksndiamonds-3.1.1.ebuild:
  version bump with help from gentoo-bugzilla@semisane.de (bug #103076)

  27 Apr 2005; Michael Sterrett <mr_bones_@gentoo.org>
  rocksndiamonds-3.1.0.ebuild:
  add user submitted levels to install (bug #90654)

  11 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  rocksndiamonds-3.1.0.ebuild:
  Added app-arch/unzip to DEPEND and closing bug #70808.

*rocksndiamonds-3.1.0 (10 Jul 2004)

  10 Jul 2004; Michael Sterrett <mr_bones_@gentoo.org>
  +rocksndiamonds-3.1.0.ebuild:
  version bump
  use emake
  more levels (patch from Tomer Chachamu via bug #55320)

*rocksndiamonds-3.0.8 (02 Apr 2004)

  02 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org>
  rocksndiamonds-3.0.8.ebuild:
  version bump and added two additional level packs

  02 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org>
  rocksndiamonds-3.0.6.ebuild:
  fix IUSE

  28 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org>
  rocksndiamonds-3.0.6.ebuild:
  enable sdl to be able to be selected as well as X since we compile both

  28 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org>
  rocksndiamonds-3.0.4.ebuild:
  clean old version

  27 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org>