@@ -1,24 +1,50 @@
-MD5 49b7a59c6444d27de9fabcfb0c93317c ChangeLog 3234
-RMD160 8d31aa7c6c2c53d47220e54b220bc979a73881b6 ChangeLog 3234
-SHA256 040e508540df6ca3b73ca4d3b787189bbe779fe0ad54387480ac24ae28ff9d4c ChangeLog 3234
-MD5 c3a75fb03914146932611aebcb406266 files/digest-rocksndiamonds-3.1.0 476
-RMD160 647cb60837027bcc173fb5281020b9ab268874b9 files/digest-rocksndiamonds-3.1.0 476
-SHA256 f513eb3d2d674241092c09788a357fe8890f050dd9913ffcf21c50e3d95a71f3 files/digest-rocksndiamonds-3.1.0 476
-MD5 c6c4112fb9e1975723b628b204dc8124 files/digest-rocksndiamonds-3.1.1 542
-RMD160 9cdbfec8bc705dc8e91ea3feab30efb574c6068d files/digest-rocksndiamonds-3.1.1 542
-SHA256 37c70d13cd2ecddc17176181769f712f5697282c8ff7a21d2bdf5cb1bf32f6c5 files/digest-rocksndiamonds-3.1.1 542
-MD5 7b08da266bb4a0e8d722f563d887cca8 files/digest-rocksndiamonds-3.1.2 617
-RMD160 85a4b2d3f10f262421d20b44ff55308ec7826d87 files/digest-rocksndiamonds-3.1.2 617
-SHA256 e4172d976f9d9c81e079fc20a79f21fae3f458b661d9503aa0c6cca788d8d5ed files/digest-rocksndiamonds-3.1.2 617
-MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
-RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea metadata.xml 158
-SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 metadata.xml 158
+DIST BD2K3-1.0.0.zip 4715324 RMD160 50b0ffdecb609711f9bfd5819b50ac1816e18588 SHA1 822f8c2767b68360f73dd5ae4bc56c3e39c2d9ba SHA256 5fc5130c859e69d6907bff87e01ff2296d59f7376202a8aacc03e55f359fb351
+DIST Boulder_Dash_Dream-1.0.0.zip 10923437 RMD160 ecf209811ed15767d1114c82c800ca801d0387a4 SHA1 d6900835dee0b551ac3aeac275657817c4a26786 SHA256 6f9dc48023830fbdc318d8f18013b5a7e84ab3c815ba566a4a2c46faeb65c969
+DIST Snake_Bite-1.0.0.zip 6506066 RMD160 b8a5d7dc61086c8b3ef08275dd597ecae63ee80d SHA1 ddf2ccf0caa2a8595ea771878827429c1f09cdad SHA256 6f6b573d89588f56cb3b326f3a42fb57277307bd709713dbef329885ac4d006d
+DIST rnd-contrib-1.0.0.tar.gz 3389242 RMD160 54c9b860b7d027eb6e24af72e8b731df85776195 SHA1 9b55ae5865575ba76a90353b1b3883ef3950d792 SHA256 c24b56399ba202ebf60bb60316e81d7996ccd02ae281a7e54f2f555e088a1ce1
+DIST rnd_jue-v5.zip 8816902
+DIST rnd_jue-v6.zip 9997237 RMD160 4847529e5bb5802270331cdc81a500f8b8b7efbe SHA1 f615505d4af68ede01a3df97bd3687f4daf0a99d SHA256 e301ad119ab0835621ee9a52dd23b34632dbc43926d3f94a60837a1d03734753
+DIST rnd_jue-v7.zip 10216825 RMD160 3c8a4b86289267d30772b0a1cd3889d3a476eb49 SHA1 0396db88600db82cbdda5cc090b05974c3026509 SHA256 8b7910ce8e9170eabad917bdbe0ca2db840ed4489414022e706025fb40125906
+DIST rockslevels-dx-1.0.tar.gz 211151 RMD160 1fb969e4205aa16318a8a8ae4d33de21b5050c78 SHA1 5f2d119c978c4f91bb1ff53594a8765b5237caae SHA256 23f1710710eef1dcd1c490670de16d2d58dc98f3fdd9a2df186bdca590e57579
+DIST rockslevels-emc-1.0.tar.gz 3824268 RMD160 d9baa3e625f8857b40dc247f39ae16a53d27f77c SHA1 1b4de87eef54f3f8b5bb3dd6eda47588dc2182d4 SHA256 a04e554fb8b6d010c73e21de090f116dad6054e43e00edc80c59c71a8a1eaa0c
+DIST rockslevels-sp-1.0.tar.gz 373564 RMD160 ddfc4b5af5bdbbabd1fd884f14f76257d75e52d3 SHA1 049edb601654bdf31046ffd60c8234a13cf19540 SHA256 770d75a5926bb924c6787a6f95ee9f7af743b629ea14005ab0375b57eb488f25
+DIST rocksndiamonds-3.1.0.tar.gz 3004476
+DIST rocksndiamonds-3.1.1.tar.gz 3122766
+DIST rocksndiamonds-3.1.2.tar.gz 3120830
+DIST rocksndiamonds-3.2.0.tar.gz 3215788 RMD160 396eed9b9bb264b3fcb128f7fd26003ed57876f6 SHA1 76d5f4029bf437d94d56d464f05e4a3e32e1307b SHA256 e85175ecbfc91623ec1f6b62fe2b23d69b00cc57482c9c4ddab275de6af60f99
+EBUILD rocksndiamonds-3.1.0.ebuild 2345 RMD160 fd9a54014e9a843e3a381aa8f0dbeaad9773459f SHA1 84b1febd4f816f86ba577583469f0e7cf76933b4 SHA256 f9c3c8d0ac4345713690d70dd9c227b5d29f7147cced5ff2a0bee42b57f33361
 MD5 1eacd8390ac670969e79d26d74fc731e rocksndiamonds-3.1.0.ebuild 2345
 RMD160 fd9a54014e9a843e3a381aa8f0dbeaad9773459f rocksndiamonds-3.1.0.ebuild 2345
 SHA256 f9c3c8d0ac4345713690d70dd9c227b5d29f7147cced5ff2a0bee42b57f33361 rocksndiamonds-3.1.0.ebuild 2345
+EBUILD rocksndiamonds-3.1.1.ebuild 2673 RMD160 e70ea3a5eac32d08d6d673f8e0955d093bb72d42 SHA1 b39b58ae22f44fe2bd08bcbd4873ff95cef59873 SHA256 00e81bdc3ae5361ba423a634b2b285b49bab0f3e91b242195e2d04293be0ca27
 MD5 08621a83050d05524d44a338a1690109 rocksndiamonds-3.1.1.ebuild 2673
 RMD160 e70ea3a5eac32d08d6d673f8e0955d093bb72d42 rocksndiamonds-3.1.1.ebuild 2673
 SHA256 00e81bdc3ae5361ba423a634b2b285b49bab0f3e91b242195e2d04293be0ca27 rocksndiamonds-3.1.1.ebuild 2673
+EBUILD rocksndiamonds-3.1.2.ebuild 2790 RMD160 6ff5eb28e12c7f39c8348347df5b29cd4f573148 SHA1 82fd3f744a8a2a9b2c4e8844bebe46b8be887dd9 SHA256 ba02bd7c7ee75bad78af212037dfa2fa9fbb726816c2b0fd79670e1ef680187c
 MD5 8c173ea1c27bb861c60b7752a639d764 rocksndiamonds-3.1.2.ebuild 2790
 RMD160 6ff5eb28e12c7f39c8348347df5b29cd4f573148 rocksndiamonds-3.1.2.ebuild 2790
 SHA256 ba02bd7c7ee75bad78af212037dfa2fa9fbb726816c2b0fd79670e1ef680187c rocksndiamonds-3.1.2.ebuild 2790
+EBUILD rocksndiamonds-3.2.0.ebuild 2786 RMD160 12e15c5584208dcd1db588358df8a7a1c367b0cf SHA1 508663109529b1d380badcc6a5ed09feb2d84b42 SHA256 e4ca42c014bb7de4e4ac5d18c19aee4ddf7124e5089c7e438790ea39e1229130
+MD5 03388a7f9458627b747b634217e598f5 rocksndiamonds-3.2.0.ebuild 2786
+RMD160 12e15c5584208dcd1db588358df8a7a1c367b0cf rocksndiamonds-3.2.0.ebuild 2786
+SHA256 e4ca42c014bb7de4e4ac5d18c19aee4ddf7124e5089c7e438790ea39e1229130 rocksndiamonds-3.2.0.ebuild 2786
+MISC ChangeLog 3370 RMD160 f5aa05b65169af5ff9f0dc4118292e0fed538723 SHA1 ba96aeb3e212c68dc5c081db6c3fa3734c3bb976 SHA256 6537c633e0a222635fb4b059df93b5e0406f06736ba73bef03b3a9f27579b340
+MD5 90a4859681b39595dc359894475e49b0 ChangeLog 3370
+RMD160 f5aa05b65169af5ff9f0dc4118292e0fed538723 ChangeLog 3370
+SHA256 6537c633e0a222635fb4b059df93b5e0406f06736ba73bef03b3a9f27579b340 ChangeLog 3370
+MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
+MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
+RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea metadata.xml 158
+SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 metadata.xml 158
+MD5 8bbbc76d08786c694f0650e1917da1dc files/digest-rocksndiamonds-3.1.0 1392
+RMD160 251b76393db076c850c61d536d823d5125aab0e4 files/digest-rocksndiamonds-3.1.0 1392
+SHA256 5dcba880a01f83de8e4f611e8f5df5c86bc52774b1d7f6d301299b109babd068 files/digest-rocksndiamonds-3.1.0 1392
+MD5 f226833a9c5debcfd855a39caacf1227 files/digest-rocksndiamonds-3.1.1 1802
+RMD160 ec51f66a6b458c49fda23a59111146e209167132 files/digest-rocksndiamonds-3.1.1 1802
+SHA256 8162853c60155c49f06146009530a09121281fe35da77a84e0f6df3efd122f00 files/digest-rocksndiamonds-3.1.1 1802
+MD5 dedd07c5a3906304bb2ac3ed15fddb95 files/digest-rocksndiamonds-3.1.2 2073
+RMD160 cadd05f1001b2673d705cf10e84e4c3172d9834c files/digest-rocksndiamonds-3.1.2 2073
+SHA256 de99ae35651a45d256a8d3dbc3e1911d59d43c884f0b2b43859d773167eb5155 files/digest-rocksndiamonds-3.1.2 2073
+MD5 4d9036299513d39a4fd6311fcb311683 files/digest-rocksndiamonds-3.2.0 2268
+RMD160 ba38a10ff1e36559e12bd5cffba26bde07c17391 files/digest-rocksndiamonds-3.2.0 2268
+SHA256 4a2dbf85b81c14dd95003c46c9565c505e3a337bcf8c38dfe4489c05d4ece7e3 files/digest-rocksndiamonds-3.2.0 2268
