@@ -1,7 +1,17 @@
-MD5 526af63a10a498ab7d809783fffc9ade rocksndiamonds-3.1.0.tar.gz 3004476
 MD5 ebc8e019fa9a799757d90828e242c206 BD2K3-1.0.0.zip 4715324
+RMD160 50b0ffdecb609711f9bfd5819b50ac1816e18588 BD2K3-1.0.0.zip 4715324
+SHA256 5fc5130c859e69d6907bff87e01ff2296d59f7376202a8aacc03e55f359fb351 BD2K3-1.0.0.zip 4715324
 MD5 bc5c427c2408c2886ceb13f59d2e3e75 rnd-contrib-1.0.0.tar.gz 3389242
-MD5 9c6cbf7394e465a90af66236dc1db6f5 rockslevels-emc-1.0.tar.gz 3824268
-MD5 3af9a97e59f29995f3f7fc4da0595af6 rockslevels-sp-1.0.tar.gz 373564
-MD5 fbc250f7995c666c1c745dbaf591ce32 rockslevels-dx-1.0.tar.gz 211151
+RMD160 54c9b860b7d027eb6e24af72e8b731df85776195 rnd-contrib-1.0.0.tar.gz 3389242
+SHA256 c24b56399ba202ebf60bb60316e81d7996ccd02ae281a7e54f2f555e088a1ce1 rnd-contrib-1.0.0.tar.gz 3389242
 MD5 d516ddb1378927b1600a6ecdb6cf15f1 rnd_jue-v5.zip 8816902
+MD5 fbc250f7995c666c1c745dbaf591ce32 rockslevels-dx-1.0.tar.gz 211151
+RMD160 1fb969e4205aa16318a8a8ae4d33de21b5050c78 rockslevels-dx-1.0.tar.gz 211151
+SHA256 23f1710710eef1dcd1c490670de16d2d58dc98f3fdd9a2df186bdca590e57579 rockslevels-dx-1.0.tar.gz 211151
+MD5 9c6cbf7394e465a90af66236dc1db6f5 rockslevels-emc-1.0.tar.gz 3824268
+RMD160 d9baa3e625f8857b40dc247f39ae16a53d27f77c rockslevels-emc-1.0.tar.gz 3824268
+SHA256 a04e554fb8b6d010c73e21de090f116dad6054e43e00edc80c59c71a8a1eaa0c rockslevels-emc-1.0.tar.gz 3824268
+MD5 3af9a97e59f29995f3f7fc4da0595af6 rockslevels-sp-1.0.tar.gz 373564
+RMD160 ddfc4b5af5bdbbabd1fd884f14f76257d75e52d3 rockslevels-sp-1.0.tar.gz 373564
+SHA256 770d75a5926bb924c6787a6f95ee9f7af743b629ea14005ab0375b57eb488f25 rockslevels-sp-1.0.tar.gz 373564
+MD5 526af63a10a498ab7d809783fffc9ade rocksndiamonds-3.1.0.tar.gz 3004476
