@@ -1,8 +1,22 @@
-MD5 6a6e0397f043314e3df8ee85c03590b5 rocksndiamonds-3.1.1.tar.gz 3122766
 MD5 ebc8e019fa9a799757d90828e242c206 BD2K3-1.0.0.zip 4715324
-MD5 bc5c427c2408c2886ceb13f59d2e3e75 rnd-contrib-1.0.0.tar.gz 3389242
-MD5 9c6cbf7394e465a90af66236dc1db6f5 rockslevels-emc-1.0.tar.gz 3824268
-MD5 3af9a97e59f29995f3f7fc4da0595af6 rockslevels-sp-1.0.tar.gz 373564
-MD5 fbc250f7995c666c1c745dbaf591ce32 rockslevels-dx-1.0.tar.gz 211151
+RMD160 50b0ffdecb609711f9bfd5819b50ac1816e18588 BD2K3-1.0.0.zip 4715324
+SHA256 5fc5130c859e69d6907bff87e01ff2296d59f7376202a8aacc03e55f359fb351 BD2K3-1.0.0.zip 4715324
 MD5 52ef211765c995ea40ecb646345fdc2b Snake_Bite-1.0.0.zip 6506066
+RMD160 b8a5d7dc61086c8b3ef08275dd597ecae63ee80d Snake_Bite-1.0.0.zip 6506066
+SHA256 6f6b573d89588f56cb3b326f3a42fb57277307bd709713dbef329885ac4d006d Snake_Bite-1.0.0.zip 6506066
+MD5 bc5c427c2408c2886ceb13f59d2e3e75 rnd-contrib-1.0.0.tar.gz 3389242
+RMD160 54c9b860b7d027eb6e24af72e8b731df85776195 rnd-contrib-1.0.0.tar.gz 3389242
+SHA256 c24b56399ba202ebf60bb60316e81d7996ccd02ae281a7e54f2f555e088a1ce1 rnd-contrib-1.0.0.tar.gz 3389242
 MD5 ca201ef0cd6b48f0ae4faf68b9717f02 rnd_jue-v6.zip 9997237
+RMD160 4847529e5bb5802270331cdc81a500f8b8b7efbe rnd_jue-v6.zip 9997237
+SHA256 e301ad119ab0835621ee9a52dd23b34632dbc43926d3f94a60837a1d03734753 rnd_jue-v6.zip 9997237
+MD5 fbc250f7995c666c1c745dbaf591ce32 rockslevels-dx-1.0.tar.gz 211151
+RMD160 1fb969e4205aa16318a8a8ae4d33de21b5050c78 rockslevels-dx-1.0.tar.gz 211151
+SHA256 23f1710710eef1dcd1c490670de16d2d58dc98f3fdd9a2df186bdca590e57579 rockslevels-dx-1.0.tar.gz 211151
+MD5 9c6cbf7394e465a90af66236dc1db6f5 rockslevels-emc-1.0.tar.gz 3824268
+RMD160 d9baa3e625f8857b40dc247f39ae16a53d27f77c rockslevels-emc-1.0.tar.gz 3824268
+SHA256 a04e554fb8b6d010c73e21de090f116dad6054e43e00edc80c59c71a8a1eaa0c rockslevels-emc-1.0.tar.gz 3824268
+MD5 3af9a97e59f29995f3f7fc4da0595af6 rockslevels-sp-1.0.tar.gz 373564
+RMD160 ddfc4b5af5bdbbabd1fd884f14f76257d75e52d3 rockslevels-sp-1.0.tar.gz 373564
+SHA256 770d75a5926bb924c6787a6f95ee9f7af743b629ea14005ab0375b57eb488f25 rockslevels-sp-1.0.tar.gz 373564
+MD5 6a6e0397f043314e3df8ee85c03590b5 rocksndiamonds-3.1.1.tar.gz 3122766
