@@ -10,9 +10,9 @@ SHA256 6f6b573d89588f56cb3b326f3a42fb57277307bd709713dbef329885ac4d006d Snake_Bi
 MD5 bc5c427c2408c2886ceb13f59d2e3e75 rnd-contrib-1.0.0.tar.gz 3389242
 RMD160 54c9b860b7d027eb6e24af72e8b731df85776195 rnd-contrib-1.0.0.tar.gz 3389242
 SHA256 c24b56399ba202ebf60bb60316e81d7996ccd02ae281a7e54f2f555e088a1ce1 rnd-contrib-1.0.0.tar.gz 3389242
-MD5 ca201ef0cd6b48f0ae4faf68b9717f02 rnd_jue-v6.zip 9997237
-RMD160 4847529e5bb5802270331cdc81a500f8b8b7efbe rnd_jue-v6.zip 9997237
-SHA256 e301ad119ab0835621ee9a52dd23b34632dbc43926d3f94a60837a1d03734753 rnd_jue-v6.zip 9997237
+MD5 37b08861cac0bb5c0e3cc07b10fff1e2 rnd_jue-v7.zip 10216825
+RMD160 3c8a4b86289267d30772b0a1cd3889d3a476eb49 rnd_jue-v7.zip 10216825
+SHA256 8b7910ce8e9170eabad917bdbe0ca2db840ed4489414022e706025fb40125906 rnd_jue-v7.zip 10216825
 MD5 fbc250f7995c666c1c745dbaf591ce32 rockslevels-dx-1.0.tar.gz 211151
 RMD160 1fb969e4205aa16318a8a8ae4d33de21b5050c78 rockslevels-dx-1.0.tar.gz 211151
 SHA256 23f1710710eef1dcd1c490670de16d2d58dc98f3fdd9a2df186bdca590e57579 rockslevels-dx-1.0.tar.gz 211151
@@ -22,4 +22,6 @@ SHA256 a04e554fb8b6d010c73e21de090f116dad6054e43e00edc80c59c71a8a1eaa0c rockslev
 MD5 3af9a97e59f29995f3f7fc4da0595af6 rockslevels-sp-1.0.tar.gz 373564
 RMD160 ddfc4b5af5bdbbabd1fd884f14f76257d75e52d3 rockslevels-sp-1.0.tar.gz 373564
 SHA256 770d75a5926bb924c6787a6f95ee9f7af743b629ea14005ab0375b57eb488f25 rockslevels-sp-1.0.tar.gz 373564
-MD5 489d1c1401ef1fe1bd218ba465b05594 rocksndiamonds-3.1.2.tar.gz 3120830
+MD5 0403e252fd978095e9546c0f10fa55ac rocksndiamonds-3.2.0.tar.gz 3215788
+RMD160 396eed9b9bb264b3fcb128f7fd26003ed57876f6 rocksndiamonds-3.2.0.tar.gz 3215788
+SHA256 e85175ecbfc91623ec1f6b62fe2b23d69b00cc57482c9c4ddab275de6af60f99 rocksndiamonds-3.2.0.tar.gz 3215788
