@@ -1,6 +1,12 @@
 # ChangeLog for games-arcade/rocksndiamonds
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/rocksndiamonds/ChangeLog,v 1.19 2006/01/29 00:00:27 joshuabaergen Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/rocksndiamonds/ChangeLog,v 1.20 2006/07/17 03:28:09 mr_bones_ Exp $
+
+*rocksndiamonds-3.2.0 (17 Jul 2006)
+
+  17 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org>
+  +rocksndiamonds-3.2.0.ebuild:
+  version bump
 
   28 Jan 2006; Joshua Baergen <joshuabaergen@gentoo.org>
   rocksndiamonds-3.1.0.ebuild, rocksndiamonds-3.1.1.ebuild,
